Fixed bug #40770 (Apache child exits when PHP memory limit reached)